--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="container">
       <div class="page-header">
         <div class="logo">
-          <a href="#">Logo.</a>
+          <a href="#">Portfolio.</a>
         </div>
         <input type="checkbox" id="click" />
 
